mudando a cor principal

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
 }
 
 .area-vantagens{
-    background-color: #281246;
+    background-color: #1c501a;
     
 }
 
@@ -76,7 +76,7 @@
 }
 
 .short-area{
-    background-color: #281246;
+    background-color: #1c501a;
     
 }
 
@@ -85,7 +85,7 @@
 }
 
 .contact-area{
-    background-color: #281246;
+    background-color: #1c501a;
 }
 
 .gg-mail {
